--- a/InvoiceManager/packages.config
+++ b/InvoiceManager/packages.config
@@ -5,6 +5,7 @@
   <package id="Bootstrap.Datepicker" version="1.8.0.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="jQuery" version="3.6.4" targetFramework="net48" />
+  <package id="jQuery.Cookie" version="1.4.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net48" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.3" targetFramework="net48" />
@@ -27,6 +28,9 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="NLog" version="4.7.15" targetFramework="net48" />
+  <package id="NLog.Config" version="4.7.15" targetFramework="net48" />
+  <package id="NLog.Schema" version="4.7.15" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="Rotativa" version="1.7.3" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
